--- a/ex1/index.html
+++ b/ex1/index.html
@@ -43,7 +43,7 @@
 		<tr><td>Perl</td><td>Python</td></tr>
 		<tr>
 			<td><a href="./ex1.pl">ex1.pl (Perl)<a></td>
-			<td><a href="./ex1.py">ex1.py (ython)<a></td>
+			<td><a href="./ex1.py">ex1.py (python)<a></td>
 		</tr>
 	</table>
       </section>
