update to ex1.html page

--- a/ex1/index.html
+++ b/ex1/index.html
@@ -42,8 +42,14 @@
 	<table>
 		<tr><td>Perl</td><td>Python</td></tr>
 		<tr>
-			<td><a href="./ex1.pl">ex1.pl (Perl)<a></td>
-			<td><a href="./ex1.py">ex1.py (python)<a></td>
+			<td>
+				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.pl">ex1.pl (view)</a><br>
+				<a href="./ex1.pl">ex1.pl (download)<a>
+			</td>
+			<td>
+				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.py">ex1.py (view)</a><br>
+				<a href="./ex1.py">ex1.py (download)<a>
+			</td>
 		</tr>
 	</table>
       </section>
