Add our first ruby example

--- a/ex1/index.html
+++ b/ex1/index.html
@@ -40,7 +40,7 @@
       <section>
 	<h3>Sample Solutions</h3>
 	<table>
-		<tr><td>Perl</td><td>Python</td></tr>
+		<tr><td>Perl</td><td>Python</td><td>Ruby</td></tr>
 		<tr>
 			<td>
 				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.pl">ex1.pl (view)</a><br>
@@ -49,6 +49,11 @@
 			<td>
 				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.py">ex1.py (view)</a><br>
 				<a href="./ex1.py">ex1.py (download)<a>
+			</td>
+			<td>
+				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.rb">ex1.rb (view)</a><br>
+				<a href="./ex1.pl">ex1.rb (download)<a>
+				
 			</td>
 		</tr>
 	</table>
