Tweak login form layout

--- a/ex2/index.html
+++ b/ex2/index.html
@@ -37,8 +37,8 @@
       <section>
 	<h3>Log in to our "app"</h3>
 	<form method="get" action="login_test.html">
-		<input name="username" type="text" value="">
-		<input name="password" type="password" value="">
+		Username: <input name="username" type="text" value=""><br>
+		Password: <input name="password" type="password" value=""><br>
 		<input type="submit" value="Login">
 	</form>
       </section>
