Add error class to error span

--- a/ex2/login_test.html
+++ b/ex2/login_test.html
@@ -35,7 +35,7 @@
 			} else {
 				document.write('Current user: <h2 class="user">guest</h2>');
 				if(window.location.href.match(/password=/)) {
-					document.write('<h2 style="color:red">Incorrect Password</h2>');
+					document.write('<h2 class="error" style="color:red">Incorrect Password</h2>');
 				}
 			}
 		</script>
