Fix link to ruby script download

--- a/ex2/index.html
+++ b/ex2/index.html
@@ -48,16 +48,16 @@
 		<tr><td>Perl</td><td>Python</td><td>Ruby</td></tr>
 		<tr>
 			<td>
-				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.pl">ex1.pl (view)</a><br>
-				<a href="./ex1.pl">ex1.pl (download)<a>
+				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex2/ex2.pl">ex2.pl (view)</a><br>
+				<a href="./ex2.pl">ex2.pl (download)<a>
 			</td>
 			<td>
-				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.py">ex1.py (view)</a><br>
-				<a href="./ex1.py">ex1.py (download)<a>
+				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex2/ex2.py">ex2.py (view)</a><br>
+				<a href="./ex2.py">ex2.py (download)<a>
 			</td>
 			<td>
-				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.rb">ex1.rb (view)</a><br>
-				<a href="./ex1.pl">ex1.rb (download)<a>
+				<a href="https://github.com/tvroom/selenium-exercises/blob/master/ex1/ex1.rb">ex2.rb (view)</a><br>
+				<a href="./ex2.rb">ex2.rb (download)<a>
 				
 			</td>
 		</tr>
