Update instructions for login test scenario

--- a/ex2/index.html
+++ b/ex2/index.html
@@ -33,6 +33,12 @@
 	<br>
 	Username: bob<br>
 	Password: foobaz<br>
+	<p>
+	Test the following:
+	<ol>
+	<li>We are logged in as bob when supplying correct credentials</li>
+	<li>We are logged in as guest when we don't supply a bad password</li>
+	<li>We get an Incorrect Password error when supplying a bad password</li>
       </section>
       <section>
 	<h3>Log in to our "app"</h3>
