Update index to show 2nd set of exercises

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<h3>Example Exercise Listing</h3>
 	<ul>
 		<li><a href="./ex1">Exercise One: Find an element via css and get and verify it's text</a></li>
+		<li><a href="./ex2">Exercise Two: Test login flow</a> fill out and submit a form, and check resulting page for results</li>
 	</ul>
 
       </section>
