--- a/ex_base/index.html
+++ b/ex_base/index.html
@@ -30,7 +30,7 @@
       <section class="exercise_nav">
 	<table>
 		<tr>
-			<td>&lt;Exercise [% prev %]</td><td></td>Exercise [% next %]&gt;</td>
+			<td>&lt;Exercise [% prev %]</td><td>Exercise [% next %]&gt;</td>
 		</tr>
 	</table>
       </section>
@@ -66,7 +66,7 @@
       <section class="exercise_nav">
 	<table>
 		<tr>
-			<td>&lt;Exercise [% prev %]</td><td></td>Exercise [% next %]&gt;</td>
+			<td>&lt;Exercise [% prev %]</td><td>Exercise [% next %]&gt;</td>
 		</tr>
 	</table>
       </section>
