Update navigation on base template

--- a/ex_base/index.html
+++ b/ex_base/index.html
@@ -30,7 +30,9 @@
       <section class="exercise_nav">
 	<table>
 		<tr>
-			<td>&lt;Exercise [% prev %]</td><td>Exercise [% next %]&gt;</td>
+			<td><a href="./ex[% prev %]">&lt;Exercise [% prev %]</a></td>
+			<td><a href="./">All Exercises</a></td>
+			<td><a href="./ex[% next %]">Exercise [% next %]&gt;</a></td>
 		</tr>
 	</table>
       </section>
@@ -66,7 +68,9 @@
       <section class="exercise_nav">
 	<table>
 		<tr>
-			<td>&lt;Exercise [% prev %]</td><td>Exercise [% next %]&gt;</td>
+			<td><a href="./ex[% prev %]">&lt;Exercise [% prev %]</a></td>
+			<td><a href="./">All Exercises</a></td>
+			<td><a href="./ex[% next %]">Exercise [% next %]&gt;</a></td>
 		</tr>
 	</table>
       </section>
