--- a/ex_base/index.html
+++ b/ex_base/index.html
@@ -30,9 +30,9 @@
       <section class="exercise_nav">
 	<table>
 		<tr>
-			<td><a href="./ex[% prev %]">&lt;Exercise [% prev %]</a></td>
-			<td><a href="./">All Exercises</a></td>
-			<td><a href="./ex[% next %]">Exercise [% next %]&gt;</a></td>
+			<td><a href="../ex[% prev %]">&lt;Exercise [% prev %]</a></td>
+			<td><a href="../">All Exercises</a></td>
+			<td><a href="../ex[% next %]">Exercise [% next %]&gt;</a></td>
 		</tr>
 	</table>
       </section>
@@ -68,9 +68,9 @@
       <section class="exercise_nav">
 	<table>
 		<tr>
-			<td><a href="./ex[% prev %]">&lt;Exercise [% prev %]</a></td>
-			<td><a href="./">All Exercises</a></td>
-			<td><a href="./ex[% next %]">Exercise [% next %]&gt;</a></td>
+			<td><a href="../ex[% prev %]">&lt;Exercise [% prev %]</a></td>
+			<td><a href="../">All Exercises</a></td>
+			<td><a href="../ex[% next %]">Exercise [% next %]&gt;</a></td>
 		</tr>
 	</table>
       </section>
