Updates to base template and navigation between 1st 2 exercises

--- a/ex1/index.html
+++ b/ex1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Selenium-exercises by tvroom</title>
+    <title>Exercise 1: Using CSS to locate an element and check its text - Selenium exercises</title>
 
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
@@ -27,6 +27,15 @@
           <li><a href="https://github.com/tvroom/selenium-exercises">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
+      <section class="exercise_nav">
+	<table>
+		<tr>
+			<td></td>
+			<td><a href="../">All Exercises</a></td>
+			<td><a href="../ex2">Exercise 2 &gt;</a></td>
+		</tr>
+	</table>
+      </section>
       <section>
         <h3>Exercise 1: Using CSS to locate an element and check its text</h3>
 	In the page below, use a css selector to grab the h3 header containing the text "Selenium Test Header" (hint it's an h3 with a class sel_header)
@@ -55,6 +64,15 @@
 				<a href="./ex2.pl">ex1.rb (download)<a>
 				
 			</td>
+		</tr>
+	</table>
+      </section>
+      <section class="exercise_nav">
+	<table>
+		<tr>
+			<td></td>
+			<td><a href="../">All Exercises</a></td>
+			<td><a href="../ex2">Exercise 2 &gt;</a></td>
 		</tr>
 	</table>
       </section>
