--- a/ex2/index.html
+++ b/ex2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Selenium-exercises by tvroom</title>
+    <title>Exercise 2: Testing Login - Selenium exercises</title>
 
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
@@ -27,6 +27,15 @@
           <li><a href="https://github.com/tvroom/selenium-exercises">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
+      <section class="exercise_nav">
+	<table>
+		<tr>
+			<td><a href="../ex1">&lt; Exercise 1</a></td>
+			<td><a href="../">All Exercises</a></td>
+			<td><!-- <a href="../ex3">Exercise 3 &gt;</a>--></td>
+		</tr>
+	</table>
+      </section>
       <section>
         <h3>Exercise 2: Testing Login</h3>
 	In this page fill out the username and password fields with the following values and hit Login.
@@ -66,6 +75,15 @@
 				<a href="./ex2.rb">ex2.rb (download)<a>
 				
 			</td>
+		</tr>
+	</table>
+      </section>
+      <section class="exercise_nav">
+	<table>
+		<tr>
+			<td><a href="../ex1">&lt; Exercise 1</a></td>
+			<td><a href="../">All Exercises</a></td>
+			<td><!-- <a href="../ex3">Exercise 3 &gt;</a>--></td>
 		</tr>
 	</table>
       </section>
