--- a/ex_base/index.html
+++ b/ex_base/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Selenium-exercises by tvroom</title>
+    <title>[% title %] - Selenium exercises</title>
 
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
@@ -32,7 +32,7 @@
 		<tr>
 			<td><a href="../ex[% prev %]">&lt;Exercise [% prev %]</a></td>
 			<td><a href="../">All Exercises</a></td>
-			<td><a href="../ex[% next %]">Exercise [% next %]&gt;</a></td>
+			<td><a href="../ex[% next %]">Exercise [% next %] &gt;</a></td>
 		</tr>
 	</table>
       </section>
@@ -70,7 +70,7 @@
 		<tr>
 			<td><a href="../ex[% prev %]">&lt;Exercise [% prev %]</a></td>
 			<td><a href="../">All Exercises</a></td>
-			<td><a href="../ex[% next %]">Exercise [% next %]&gt;</a></td>
+			<td><a href="../ex[% next %]">Exercise [% next %] &gt;</a></td>
 		</tr>
 	</table>
       </section>
